Workshop/K8s/mssql-platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          # Environment variables
          volumeMounts:
          # SQL Server database location
          - mountPath: /var/opt/mssql/data
            name: mssqldb
      volumes:
      - name: mssqldb
        # Consuming the claim
        persistentVolumeClaim: 
          claimName: mssql-claim
---
# Cluster IP service exposes MSSQL inside the cluster.
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql-clusterip-srv-port
    protocol: TCP
    port: 1433
    targetPort: 1433
---
# Load Balancer exposes MSSQL outside the cluster.
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - name: mssql-loadbalancer-srv-port
    protocol: TCP
    port: 1433
    targetPort: 1433
