Workshop/K8s/platforms-deployment.yaml
apiVersion: apps/v1
# A Deployment provides declarative updates for Pods and ReplicaSets.
# You describe a desired state in a Deployment, and the Deployment Controller 
# changes the actual state to the desired state at a controlled rate. 
# You can define Deployments to create new ReplicaSets, or to remove existing 
# Deployments and adopt all their resources with new Deployments.
kind: Deployment
# Deployment name and other metadata
metadata: 
  name: platforms-deployment
spec:
  # The desired pod quantity
  replicas: 1
  # For which pods is this deployment
  selector: 
    matchLabels:
      app: platformservice
  # "Hidden" pod specification
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: pirocorp/workshop-platformservice:latest
---
apiVersion: v1
# An abstract way to expose an application running on a set of Pods as a network service.
kind: Service
# Service name and other metadata
metadata:
  name: platforms-clusterip-srv
spec:
  # Exposes the Service on a cluster-internal IP. Choosing this value makes the Service only reachable from within the cluster. This is the default ServiceType
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platforms-clusterip-srv-port
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platforms-grpc-port
    protocol: TCP
    port: 555
    targetPort: 555
