Workshop/K8s/platforms-np-srv.yaml
apiVersion: v1
kind: Service
# Service name and other metadata
metadata:
  name: platforms-np-srv
spec:
  # A node port exposes the service on a static port on the node IP address. NodePorts are in the 30000-32767 range by default
  type: NodePort
  # The set of Pods targeted by a Service is usually determined by a selector.
  selector:
    app: platformservice
  ports: 
    - name: platforms-np-srv-port
      protocol: TCP
      # External port
      nodePort: 32000
      # Internal port
      port: 80
      # Pod port
      targetPort: 80
