Workshop/K8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
# An API object that manages external access to the services in a cluster, typically HTTP.
# Ingress may provide load balancing, SSL termination and name-based virtual hosting.
kind: Ingress
metadata:
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # Simple fanout
  # A fanout configuration routes traffic from a single IP address to more than one Service, 
  # based on the HTTP URI being requested. An Ingress allows you to keep the number 
  # of load balancers down to a minimum.
  rules:
  # Each HTTP rule contains the following information:
  # An optional host. If no host is specified, so the rule applies to all inbound HTTP traffic 
  # through the IP address specified. If a host is provided, the rules apply to that host.
    - host: pirocorp.com
      http: 
      # A list of paths, each of which has an associated backend defined with a service.name and
      # a service.port.name or service.port.number. Both the host and path must match the content
      # of an incoming request before the load balancer directs traffic to the referenced Service.
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port: 
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port:
                  number: 80
